<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fee5eab30a698c169dc4fd5752359c2c"
    tools:context=".RegisterActivity">



    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="102dp"
        android:gravity="center"
        android:text="@string/register_register"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="101dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/nameSurname_register_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:hint="@string/name_register"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/dob_register_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:ems="10"
        android:hint="@string/d_o_b"
        android:inputType="date"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSurname_register_id" />

    <EditText
        android:id="@+id/email_register_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:hint="@string/email_register"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob_register_id"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/password_register_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="102dp"
        android:ems="10"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register_id" />

    <Button
        android:id="@+id/register_button_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="102dp"
        android:gravity="center"
        android:onClick="register"
        android:text="@string/register_register"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_register_id"
        tools:ignore="RtlCompat" />





</androidx.constraintlayout.widget.ConstraintLayout>