<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/makechanges_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/changes_message2"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="51dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moneyicon2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/name_change_main"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/name_of_change"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makechanges_main" />

    <EditText
        android:id="@+id/place_changes_main"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/place_of_change"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_change_main" />

    <EditText
        android:id="@+id/amount_change_main"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/amount_of_change"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_changes_main" />

    <EditText
        android:id="@+id/date_change_main"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/date_of_change"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_change_main" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="172dp"
        android:layout_marginRight="172dp"
        android:gravity="center"
        android:text="Commit Changes?       "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_change_main" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_change_main">

        <RadioButton
            android:id="@+id/radioButton_yes_main"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/radioButton_no_main"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="No" />
    </RadioGroup>

    <Button
        android:id="@+id/cancel_button_main"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:onClick="cancel"
        android:text="@string/cancle_button"
        app:layout_constraintEnd_toStartOf="@+id/submit_button_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/submit_button_main"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:onClick="submit"
        android:text="SUBMIT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toStartOf="@+id/makechanges_main"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moneyicon2" />
</androidx.constraintlayout.widget.ConstraintLayout>